changes to services sections

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,10 +10,10 @@ body{
     padding: 30px;
 }
 
-h1{
-	font-size: 40px;
+/*h1{
+	font-size: 30px;
 	padding-bottom: 25px;
-}
+}*/
 
 #navbar {
 	background-color: #fcfcfc;
@@ -39,7 +39,11 @@ h1{
 	background-position: center;
 	background-size: cover;
 }
-		#simons {
+		.mobile{
+			display: none;
+		}
+
+		.desktop{
 			display: block;
 			width: 100%;
 			animation-name: moveInBottom;
@@ -59,18 +63,68 @@ h1{
 		    } 
 		}
 
+		@media screen and (max-width: 900px) {
+			#home-logo .mobile{
+				display: block;
+			
+			}
+			#circle{
+				width: 200px;
+    			margin: 0 auto;
+    			margin-top: 115px;
+			}
+
+			#name {
+				width: 400px;
+			
+			}
+			#home-logo .desktop {
+				display: none;
+			}
+		}
+
 #services{
 	background-size: cover;
 	background-position: center;
 	height: 100%;
 	padding-top: 400px;
 }
+	h2{
+		font-size: 35px;
+		padding-bottom: 15px;
+		text-align: center;
+		font-weight: bold;
+		text-transform: uppercase;
+		color: #777;
+	}
 
+	.thumbnail{
+		border: none;
+	}
+
+	.caption{
+		text-align: center;
+	}
+
+	#shovel{
+		width: 200px;
+		padding: 15px;
+	}
+
+	#snowflake{
+		width: 200px;
+		padding: 15px;
+	}
+
+	#leaf{
+		width: 200px;
+		padding: 15px;
+	}
 #gallery{
 	background-size: cover;
 	background-position: center;
 	height: 100%;
-	padding-top: 200px;
+	padding-top: 100px;
 
 }
 	.thumbnailList{
@@ -101,4 +155,15 @@ h1{
 		color: #555656;
 	}
 
+#contact {
+	text-align: center;
+	padding-top: 50px;
+}
+	h3{
+		font-size: 20px;
+		color: #777;
+	}
 
+footer{
+	text-align: center;
+}
