--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,9 @@ body{
     color: #777;
     padding: 30px;
 }
+img{
+	max-width: 100%;
+}
 
 /*h1{
 	font-size: 30px;
@@ -40,7 +43,7 @@ body{
 #home-logo{
 	position: absolute;
 	top: 25%;
-	left: 35%;
+	left: 37%;
 	/*shifts the text box half of its width to the left*/
 	transform: translate(-30%, -50%);
 	/*text-align: center;*/
@@ -130,7 +133,7 @@ body{
 
 	.thumbnail{
 		border: none;
-		width: 80%;
+		width: 100%;
 		margin: 0 auto;
 		text-decoration: none;
 	}
@@ -163,10 +166,10 @@ body{
 	padding-bottom: 75px;
 }
 
-	.thumbnail img{
+	/*.thumbnail img{
 		width: 100%;
 		height: 250px;
-	}
+	}*/
 
 	#flowerbedThumbnail{
 		/*transform: rotate(90deg);*/
@@ -220,6 +223,10 @@ body{
 	h3{
 		font-size: 25px;
 		color: #777;
+		overflow-wrap: break-word;
+	}
+	.break-word{
+		
 	}
 
 footer{
