--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,8 +59,7 @@ img{
     padding-top: 315px;
     padding-bottom: 100px;
 
-}
-		
+}	
 		.mobile{
 			display: none;
 		}
@@ -103,13 +102,14 @@ img{
 		#compPic {
 			width: 400px;
     		margin-top: auto;
-    		padding-top: 425px;
-
+    		padding-top: 375px;
+			padding-bottom: 25px;
 		}
 
 		#home-logo .desktop {
 			display: none;
 		}
+
 	}
 
 
@@ -120,6 +120,8 @@ img{
 	height: 100%;
 	padding-top: 100px;
 	padding-bottom: 75px;
+	padding-left: 50px;
+    padding-right: 50px;
 }
 
 	h2{
@@ -164,18 +166,12 @@ img{
 	height: 100%;
 	padding-top: 100px;
 	padding-bottom: 75px;
+
 }
 
-	/*.thumbnail img{
-		width: 100%;
-		height: 250px;
-	}*/
-
-	#flowerbedThumbnail{
-		/*transform: rotate(90deg);*/
-	}
-	#hardscapeThumbnail {
-		/*height: 220px;*/
+	.col-md-3 {
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 /*#gallery{
 	background-size: cover;
@@ -223,7 +219,7 @@ img{
 	h3{
 		font-size: 25px;
 		color: #777;
-		overflow-wrap: break-word;
+		word-wrap: break-word;
 	}
 	.break-word{
 		
